--- a/src/index.css
+++ b/src/index.css
@@ -5,28 +5,22 @@ body {
 
 #root {
   background-color: #a81616;
-
   height: 100%;
   min-height: 100vh;
 }
+
+/* global style for any mui link */
+div a.MuiTypography-root {
+  color: white;
+}
+
+/* Global Styles for all mui buttons */
 
 button.MuiButton-root {
   background-color: #000000;
   color: #ffffff;
   border: 1px solid white;
 }
-
-div a.MuiTypography-root {
-  color: white;
-}
-/* ToDo */
-/* label.Mui-focused {
-  color: white !important;
-}
-
-.Mui-focused fieldset {
-  border-color: white !important;
-} */
 
 @media (min-width: 401px) {
   button.MuiButton-root {
