--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,12 @@ button.MuiButton-root {
 
 @media (min-width: 401px) {
   button.MuiButton-root {
-    padding: "0.5rem 1rem";
-    margin-top: "1rem";
-    width: "25%";
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    width: 25%;
   }
+}
+
+label.MuiFormControlLabel-root.MuiFormControlLabel-labelPlacementEnd.formControl.css-1eix88o-MuiFormControlLabel-root {
+  height: 25px;
 }
